# tee-router

./: .dockerignore  .gitignore  .gitmodules  .railwayignore  BEST_PRACTICES.md  CODEX_AUDIT_ACTION_ITEMS.md  CODEX_SECOND_PASS_AUDIT.md  Cargo.toml  DEPLOYMENT.md  LOCAL_TEST_FIDELITY_GAPS.md  PHYSICAL_REPLICA_CDC_PLAN.md  README.md  ROUTER_GATEWAY_ARCHITECTURE.md  SYNTHETIC_LIMIT_ORDERS.md  TODO.md  V1_LIMIT_ORDERS.md  admin-dashboard-next-steps.md  justfile  package-lock.json  package.json  paymaster-runtime-reimbursement-ledger.md  tsconfig.base.json
bitcoin-indexer/: Cargo.toml  README.md
bitcoin-indexer/src/: config.rs  error.rs  lib.rs  main.rs
bitcoin-indexer/src/api/: mod.rs  rest.rs  ws.rs
bitcoin-indexer/src/indexer/: mod.rs  multisource.rs
bitcoin-indexer/tests/: devnet_integration.rs
bitcoin-receipt-watcher/: Cargo.toml  README.md
bitcoin-receipt-watcher/src/: config.rs  error.rs  lib.rs  main.rs
bitcoin-receipt-watcher/src/api/: mod.rs  rest.rs  ws.rs
bitcoin-receipt-watcher/src/watcher/: mod.rs  pending.rs
bitcoin-receipt-watcher/tests/: devnet_integration.rs
crates/blockchain-utils/: Cargo.toml
crates/blockchain-utils/src/: alloy_ext.rs  bitcoin_wallet.rs  lib.rs  transfer_auth_helper.rs
crates/chainalysis-address-screener/: Cargo.toml
crates/chainalysis-address-screener/src/: lib.rs
crates/chains/: Cargo.toml
crates/chains/src/: bitcoin.rs  error.rs  evm.rs  hyperliquid.rs  key_derivation.rs  lib.rs  registry.rs  rpc_metrics_layer.rs  traits.rs
crates/devnet/: Cargo.toml
crates/devnet/src/: bitcoin_devnet.rs  evm_devnet.rs  hyperliquid_core.rs  hyperliquid_devnet.rs  lib.rs  manifest.rs  mock_integrators.rs
crates/devnet/tests/: hyperliquid_client_integration.rs
crates/eip7702-paymaster/: Cargo.toml
crates/eip7702-paymaster/src/: actor.rs  batched_tx.rs  config.rs  delegation.rs  error.rs  lib.rs  metrics.rs
crates/evm-receipt-watcher-client/: Cargo.toml  README.md
crates/evm-receipt-watcher-client/src/: lib.rs
crates/evm-token-indexer-client/: Cargo.toml  README.md
crates/evm-token-indexer-client/src/: lib.rs
crates/hl-shim-client/: Cargo.toml
crates/hl-shim-client/src/: lib.rs
crates/hyperliquid-client/: Cargo.toml
crates/hyperliquid-client/src/: actions.rs  bridge.rs  client.rs  eip712.rs  error.rs  http.rs  info.rs  l2book.rs  lib.rs  meta.rs  signature.rs  wire.rs
crates/hyperliquid-client/tests/: live_differential.rs
crates/hyperunit-client/: Cargo.toml
crates/hyperunit-client/src/: guardian.rs  lib.rs
crates/hyperunit-client/tests/: live_differential.rs
crates/market-pricing/: Cargo.toml
crates/market-pricing/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs  upstream.rs
crates/otc-models/: Cargo.toml
crates/otc-models/src/: constants.rs  fees.rs  lib.rs  quote.rs  serde_utils.rs  status.rs  swap.rs  swap_transitions.rs
crates/otc-models/tests/: datetime_precision_test.rs
crates/router-core/: Cargo.toml
crates/router-core/migrations/: 20260427002000_router_schema_baseline.sql  20260501180000_usd_valuations.sql  20260501213000_provider_operations_step_idempotency.sql  20260502160000_execution_legs.sql  20260504110000_deposit_vault_funding_observations.sql  20260504120000_admin_order_dashboard_indexes.sql  20260504133000_reconcile_execution_leg_retry_rollups.sql  20260504134500_execution_leg_actual_amount_constraints.sql  20260504140500_router_execution_state_constraints.sql  20260504152000_limit_order_quote_usd_valuation.sql  20260504170000_admin_dashboard_index_reconciliation.sql  20260504203000_stale_running_step_recovery_index.sql  20260504204000_manual_intervention_status.sql  20260505120000_worker_custody_cleanup_indexes.sql  20260505130000_unfunded_order_expiry_indexes.sql  20260505143000_positive_amount_constraints.sql  20260505170000_reconcile_execution_leg_step_amount_rollups.sql  20260505203000_router_cdc_event_updated_at_contract.sql  20260505213000_reconcile_completed_execution_leg_rollups.sql  20260506003000_reconcile_observed_wait_for_deposit_steps.sql  20260506010000_reconcile_execution_leg_actual_usd_valuation.sql  20260506030000_remove_router_order_failed_status.sql  20260506120000_optional_slippage_and_attempt_history.sql  20260506170000_provider_quote_expiry_on_execution_legs.sql  20260506190000_decouple_order_timeouts_from_quote_expiry.sql  20260509120000_drop_router_worker_leases.sql  20260510120000_execution_step_latency_observability.sql  20260511120000_drop_execution_step_hint_source.sql  20260511150000_provider_operation_hl_hint_kinds.sql  20260512120000_observer_typed_provider_operations.sql  20260512130000_hyperunit_provider_operation_hint_kinds.sql  20260513120000_provider_operation_idempotency_key.sql  20260514133000_hyperliquid_clearinghouse_refund_step.sql  20260515120000_swap_time_averages.sql  20260515170000_router_switches.sql  20260520190000_execution_leg_estimated_amount_out.sql  20260520193000_market_order_amount_schema.sql  20260525070000_hypercore_bridge_types.sql  20260525070000_provider_operation_step_types.sql  20260525120000_route_cost_fee_usd_micros.sql  (+6 more)
crates/router-core/src/: config.rs  error.rs  lib.rs  models.rs  protocol.rs  telemetry.rs
crates/router-core/tests/: graph_traversal.rs
crates/router-gateway-sdk/: Cargo.toml
crates/router-gateway-sdk/src/: lib.rs
crates/router-primitives/: Cargo.toml
crates/router-primitives/src/: api_key.rs  asset.rs  chain.rs  lib.rs  serde_utils.rs  wallet.rs
crates/router-temporal/: Cargo.toml
crates/router-temporal/src/: lib.rs
crates/utc/: Cargo.toml
evm-receipt-watcher/: Cargo.toml  README.md
evm-receipt-watcher/src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
evm-receipt-watcher/tests/: anvil_integration.rs
hl-shim-indexer/: Cargo.toml
hl-shim-indexer/migrations/: 20260512000000_initial.sql
hl-shim-indexer/src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
hl-shim-indexer/tests/: integration.rs  testnet_smoke.rs
integration-tests/: Cargo.toml  README.md
integration-tests/tests/: router_runtime_e2e.rs
(+531 files in other folders)
