[package]
name = "bitcoin-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bitcoin-indexer"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
bitcoin = { workspace = true }
bitcoin-indexer-client = { workspace = true }
bitcoincore-rpc-async = { workspace = true }
clap = { workspace = true }
esplora-client = { workspace = true }
futures-util = "0.3"
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
zeromq = { workspace = true }

[dev-dependencies]
devnet = { workspace = true }
reqwest = { workspace = true }
