[package]
name = "evm-receipt-watcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "evm-receipt-watcher"
path = "src/main.rs"

[dependencies]
alloy = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
evm-receipt-watcher-client = { workspace = true }
futures-util = "0.3"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
