[package]
name = "hl-shim-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hl-shim-indexer"
path = "src/main.rs"

[dependencies]
alloy = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures-util = "0.3"
hex = { workspace = true }
hyperliquid-client = { workspace = true }
metrics = { workspace = true }
observability = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlx-core = { workspace = true }
sqlx-postgres = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
devnet = { workspace = true }
testcontainers = "0.27.2"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots"] }
