[package]
name = "router-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
devnet = { workspace = true }
eip3009-erc20-contract = { workspace = true }
hyperunit-client = { workspace = true }
hl-shim-indexer = { workspace = true }
router-core = { workspace = true }
router-temporal = { workspace = true }
router-server = { path = "../bin/router-server" }
sauron = { path = "../bin/sauron" }
temporal-worker = { path = "../bin/temporal-worker" }

alloy = { workspace = true }
axum = { workspace = true }
bitcoin = { workspace = true }
bitcoincore-rpc-async = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
sqlx-core = { workspace = true }
sqlx-postgres = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
testcontainers = "0.27.2"
