[package]
name = "eip7702-paymaster"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy = { workspace = true }
eip7702-delegator-contract = { workspace = true }
metrics = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
