[package]
name = "evm-receipt-watcher-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy = { workspace = true }
async-trait = { workspace = true }
futures-util = "0.3"
metrics = { workspace = true }
observability = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = { workspace = true }
url = { workspace = true }
