[package]
name = "evm-token-indexer-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy = {workspace = true}
metrics = { workspace = true }
tracing = { workspace = true }
snafu = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
