[package]
name = "hyperliquid-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy = { workspace = true }
metrics = { workspace = true }
observability = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rmp-serde = "=1.1.2"
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
utc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
