[package]
name = "hyperunit-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "socks",
    "http2",
    "rustls-tls-webpki-roots",
] }
metrics = { workspace = true }
observability = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
url = { workspace = true }

[dev-dependencies]
alloy = { workspace = true }
hyperliquid-client = { workspace = true }
tokio = { workspace = true }
