[package]
name = "hyperunit-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "socks",
    "http2",
    "rustls-tls-webpki-roots",
] }
base64 = "0.22"
hex = "0.4"
metrics = { workspace = true }
observability = { workspace = true }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pem", "std"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
snafu = { workspace = true }
url = { workspace = true }

[dev-dependencies]
alloy = { workspace = true }
hyperliquid-client = { workspace = true }
tokio = { workspace = true }
