[package]
name = "observability"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
metrics-exporter-prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
