[package]
name = "otc-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
router-primitives = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
alloy = { workspace = true }
snafu = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
utc = { workspace = true }

[features]
default = []

[dev-dependencies]
serde_json.workspace = true
