[package]
name = "router-gateway-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
