[package]
name = "utc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
mock_instant = { workspace = true }

[features]
default = []
# When enabled, utc::now() uses mock_instant's global SystemTime/UNIX_EPOCH.
mock-time = []
